Fix wrap on assets links

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ header .logo {
     color: #F9FAF8;
     text-align: justify;
     margin-left: 5vh;
-    /* margin-right: 5vh; */
+    margin-right: 5vh;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -93,8 +93,8 @@ header .logo {
     max-width: 50%;
     height: auto;
     object-fit: contain;
-    /* margin-left: 5vh;
-    margin-right: 5vh; */
+    /* margin-left: 5vh; */
+    margin-right: 5vh;
     border-radius: 25px;
 }
 
@@ -109,6 +109,7 @@ header .logo {
 .assets-links {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .links {
